Final Updates for fixing overlap header and content.

--- a/web/themes/custom/spacebase/css/style.css
+++ b/web/themes/custom/spacebase/css/style.css
@@ -9977,6 +9977,7 @@ body.page-node-type-blog-post .text {
     width: 100%;
     height: 100%; }
 
+.services.path-node .main-container.container.js-quickedit-main-content,
 .path-news .main-container.container.js-quickedit-main-content,
 .path-videos .main-container.container.js-quickedit-main-content {
   padding-top: 9%; }
