--- a/web/themes/custom/spacebase/scss/_video.scss
+++ b/web/themes/custom/spacebase/scss/_video.scss
@@ -62,6 +62,7 @@
     }
 }
 
+.services.path-node .main-container.container.js-quickedit-main-content,
 .path-news .main-container.container.js-quickedit-main-content,
 .path-videos .main-container.container.js-quickedit-main-content {
   padding-top: 9%
